@@ -1,5 +1,9 @@
 Changes with Apache 2.0.44
 
+  *) mod_setenvif: Add SERVER_ADDR special keyword to allow
+     envariable setting according to the server IP address
+     which received the request.  [Ken Coar]
+
   *) mod_cgid: Terminate CGI scripts when the client connection 
      drops.  PR 8388  [Jeff Trawick]
 
